# python-cookiecutter

./: LICENSE  README.md  cookiecutter.json  requirements.txt
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitchangelog.rc  .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  release.py  requirements-dev.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
