[metadata]
name = {{ cookiecutter.project_slug }}
description = {{ cookiecutter.project_description }}
url = {{ cookiecutter.url }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
maintainer = {{ cookiecutter.full_name }}
maintainer_email = {{ cookiecutter.email }}
classifiers =
	Development Status :: 3 - Alpha
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >= 3.7.1
#install_requires =
#    required-package1
#    required-package2

[options.extras_require]
test = pytest; tox

[options.entry_points]
console_scripts =
	{{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}:main

[devpi:upload]
formats = bdist_wheel

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]

[bumpversion:file:setup.py]

[bumpversion:file:README.md]
