[metadata]
name = {{ cookiecutter.project_slug }}
description = {{ cookiecutter.project_description }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
maintainer = {{ cookiecutter.full_name }}
maintainer_email = {{ cookiecutter.email }}
classifiers =
	Development Status :: 3 - Alpha
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >= 3.7.1
#install_requires =
#    required-package1
#    required-package2

#[options.entry_points]
#console_scripts =
#	{{ cookiecutter.project_slug }} = {{ cookiecutter.package_slug }}.main:main

[devpi:upload]
formats = bdist_wheel

[bumpversion:file:src/{{ cookiecutter.package_slug }}__init__.py]

[bumpversion:file:setup.py]

[bumpversion:file:README.md]
